src/snapshots/afrotd__parser__tests__rule_html_1.4.8.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            1.4.8 Verfahren bei vorgeschriebener und illegaler Ausrüstung
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Keinem Spieler, der illegale Ausrüstungsteile trägt, bzw.
                dessen Ausrüstung unvollständig ist, darf es erlaubt werden, am
                Spiel teilzunehmen.
                </li>
                <li>Wenn ein Schiedsrichter einen Spieler mit unvollständiger
                bzw. illegaler Ausrüstung erkennt, muss der Spieler das Feld
                für wenigstens einen Down verlassen, und er darf nicht eher
                zurückkehren, bis die Legalität bzw. die Vollständigkeit der
                Ausrüstung wieder hergestellt ist. Der Spieler darf auf dem
                Feld bleiben, wenn sein Team ein Team-Timeout verbraucht, aber
                der Spieler darf in keinem Fall mit illegaler Ausrüstung
                spielen.
                </li>
                <li>Wird die Ausrüstung während eines Downs illegal oder
                unvollständig, muss der Spieler das Feld nicht zwangsläufig für
                mindestens einen Down verlassen, aber er darf nicht am Spiel
                teilnehmen, bis die Ausrüstung wieder legal ist (A.R.
                1.4.7.II).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.1.4.8"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
