src/snapshots/afrotd__parser__tests__rule_html_10.1.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            10.1.2 Mit dem Snap
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Foul, das sich gleichzeitig mit dem Snap oder einem Free
                Kick ereignet, wird geregelt, als wäre es während dieses Downs
                geschehen (Ausnahme: Regel 3.5.2.e).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.10.1.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
