src/snapshots/afrotd__parser__tests__rule_html_10.1.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            10.1.3 Live Ball Fouls durch dasselbe Team
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Werden dem Referee zwei oder mehrere Live Ball Fouls durch
                dasselbe Team gemeldet, kann das gefoulte Team nur eine dieser
                Strafen auswählen. Jeder Spieler, der ein Foul verursacht,
                dessen Strafe eine Disqualifikation beinhaltet, muss das Spiel
                verlassen.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.10.1.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
