src/snapshots/afrotd__parser__tests__rule_html_10.1.4.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            10.1.4 Aufhebende Fouls
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Werden dem Referee Live Ball Fouls beider Teams mitgeteilt,
                heben sich die Fouls auf und der Down wird wiederholt (A.R.
                10.1.4.I und 10.1.4.VII). Jeder Spieler, der ein Foul
                verursacht, dessen Strafe die Disqualifizierung vorschreibt,
                muss das Spiel verlassen.
            </p>
            <ol type="a">
                <p>
                    <strong>Ausnahmen:</strong>
                </p>
                <ol type="1">
                    <li>Wenn der Team Ballbesitz während eines Downs wechselt
                    und das Team, das zuletzt Ballbesitz erlangt hat, nicht
                    gefoult hat, bevor es zuletzt in Ballbesitz kam, kann
                    dieses Team aufhebende Fouls ablehnen und dadurch, nach
                    Vervollständigung der Strafe ihres Regelverstoßes, den Ball
                    behalten (A.R. 10.1.4.II bis 10.1.4.VII).
                    </li>
                    <li>Wenn alle Team B-Fouls, die sich vor einem
                    Team-Ballbesitzwechsel ereignen nach dem Postscrimmage Kick
                    Enforcement Prinzip durchgeführt werden sollen, kann Team B
                    aufhebende Fouls ablehnen und Postscrimmage Kick
                    Durchführung akzeptieren.
                    </li>
                    <li>Regel 8.3.4.c und 3.1.3.g (während eines Try oder
                    während Extraperioden, nachdem Team B Ballbesitz erlangt
                    hat).
                    </li>
                </ol>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.10.1.4"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
