src/snapshots/afrotd__parser__tests__rule_html_10.1.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            10.1.5 Dead Ball Fouls
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Strafen für Dead Ball Fouls, die sich vor einem
                Team-Ballbesitzwechsel ereignen, werden gesondert und in der
                Reihenfolge ihres Geschehens durchgeführt (A.R. 10.1.5.I bis
                10.1.5.III) (Ausnahme: Wenn unsportliche Verhalten Dead Ball
                Fouls oder persönliche Dead Ball Fouls von beiden Teams dem
                Referee gemeldet werden und keine dieser Strafen
                vervollständigt wurde, gleichen sich die Fouls aus, die Nummer
                oder der Typ des Downs, der festgesetzt wurde, bevor die Fouls
                sich ereigneten, bleiben unberührt. Jeder disqualifizierte
                Spieler muss das Spiel verlassen (Regeln 5.2.6 und 10.2.2.a)).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.10.1.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
