src/snapshots/afrotd__parser__tests__rule_html_10.1.7.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            10.1.7 Fouls während Pausen
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Strafen für Fouls, die sich zwischen dem Ende der vierten
                Spielperiode und dem Beginn einer Extraperiode, zwischen den
                Ballbesitzserien während einer Extraperiode und zwischen den
                Extraperioden ereignen, werden vom Punkt, an dem die nächste
                Ballbesitz-Serie begonnen wird, durchgeführt (Ausnahme: Regel
                10.2.5) (A.R. 10.2.5.I bis 10.2.5.XII).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.10.1.7"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
